changed opal pic, made smaller with bootstrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,16 @@
-/*diamond {
-    background-image: url("diamond.jpg");
-    background-size: cover; }
-
-opal {
-    background-image: url("opalwb.jpg");
+/* #diamondPic {
+    width: 25px;
+    height: 25px;
+} 
+#opalPic {
+    width: 25px;
+    height: 25px;
 }
-
-purple {
-    background-image: url("purple.jpg");
+#purplePic {
+    width: 25px;
+    height: 25px;
 }
-
-red {
-    background-image: url("red.jpg")
+#redPic {
+    width: 25px;
+    height: 25px;
 } */
-
-
